--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,6 +7,7 @@ env:
   GKE_CLUSTER: dwk-cluster
   GKE_ZONE: europe-north1-b
   IMAGE: projectfront
+
 jobs:
    build-publish-deploy:
      name: Build, Publish and Deploy
@@ -26,14 +27,11 @@ jobs:
 
         - run: gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
         
-        - name: Create image name and tag front
-          run: echo "IMAGE_WITH_TAG_FRONT=gcr.io/${{ secrets.GKE_PROJECT }}/$IMAGEFRONT:${GITHUB_REF#refs/heads/}$GITHUB_SHA" >> $GITHUB_ENV
-        
-        - name: Create image name and tag back
-          run: echo "IMAGE_WITH_TAG_BACK=gcr.io/${{ secrets.GKE_PROJECT }}/$IMAGEBACK:${GITHUB_REF#refs/heads/}$GITHUB_SHA" >> $GITHUB_ENV
-        
+        - name: Create image name and tag
+          run: echo "IMAGE_WITH_TAG=gcr.io/${{ secrets.GKE_PROJECT }}/$IMAGEFRONT:${GITHUB_REF#refs/heads/}$GITHUB_SHA" >> $GITHUB_ENV
+
         - name: Build
-          run: docker build --tag "$IMAGE_WITH_TAG_FRONT" .
+          run: docker build --tag "$IMAGE_WITH_TAG" .
         
         - name: Publish
           run: docker push "$IMAGE_WITH_TAG"
