--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- manifests
+- manifests/
 images:
   - name: PROJECTFRONT/IMAGE
     newName: laurihakala/project-frontend
