--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,7 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- manifests/
+- manifests/namespace.yaml
+- manifests/deployment.yaml
+- manifests/ingress.yaml
+- manifests/service.yaml
 images:
   - name: PROJECTFRONT/IMAGE
     newName: laurihakala/project-frontend
