--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   namespace: project
@@ -9,13 +9,9 @@ spec:
       paths:
       - path: /
         backend:
-          service:
-            name: project-frontend-svc
-            port: 
-              number: 2345
+          serviceName: project-frontend-svc
+          servicePort: 2345
       - path: /api
         backend:
-          service:
-            name: project-backend-svc
-            port: 
-              number: 2345
+          serviceName: project-backend-svc
+          servicePort: 2345
