--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -4,7 +4,7 @@ metadata:
   namespace: project
   name: project-frontend-svc
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: project-frontend
   ports:
