testing deployment to google cloud

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
 - manifests/service.yaml
 images:
   - name: PROJECT/IMAGE
-    newName: project-frontend
+    newName: laurihakala/projectfront
