--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,6 +43,7 @@ jobs:
         
         - name: Deploy
           run: |-
+            kubectl config set-context --current --namespace=project
             ./kustomize edit set image PROJECT/IMAGE=$IMAGE_WITH_TAG
             kubectl apply -k .
             kubectl rollout status deployment $IMAGE
