configured ingress to api/todos

--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -15,3 +15,7 @@ spec:
         backend:
           serviceName: project-backend-svc
           servicePort: 2345
+      - path: /api/todos
+        backend:
+          serviceName: project-backend-svc
+          servicePort: 2345
