--- a/.github/workflows/ondelete.yaml
+++ b/.github/workflows/ondelete.yaml
@@ -1,8 +1,7 @@
 name: Delete environment from GKE
 
 on:
-  repository_dispatch:
-    types: [deleted]
+  delete:
 
 env:
   GKE_CLUSTER: dwk-cluster
@@ -29,4 +28,4 @@ jobs:
         
         - name: Delete
           run: |-
-            kubectl delete all --all -n ${GITHUB_REF#refs/heads/}
+            kubectl delete all --all -n ${{ github.event.ref }}
