delete environment only from branch

--- a/.github/workflows/ondelete.yaml
+++ b/.github/workflows/ondelete.yaml
@@ -28,4 +28,4 @@ jobs:
         - name: Delete
           run: |-
             kubectl config set-context --current --namespace=${GITHUB_REF#refs/heads/}
-            kubectl delete all --all
+            kubectl delete ns ${GITHUB_REF#refs/heads/}
