--- a/manifests/horizontalpodautoscaler.yaml
+++ b/manifests/horizontalpodautoscaler.yaml
@@ -1,12 +1,12 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: cpushredder-hpa
+  name: project-fronted-hpa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: cpushredder-dep
+    name: project-frontend
   minReplicas: 1
-  maxReplicas: 6
+  maxReplicas: 2
   targetCPUUtilizationPercentage: 50
